fixed h2 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1{
 
 h2{
   position: absolute;
-	width: 500px;
+	width: 430px;
 	font-family: 'Almarai', sans-serif;
 	font-weight: 100;
 	font-style:normal;
